# algorithms_book

./: Cargo.toml  README.md  pyproject.toml
src/ch03/: code_1.py  code_1.rs  code_2.py  code_2.rs  code_3.py  code_3.rs  code_4.py  code_4.rs  code_5.py  code_5.rs  solution3_2.py  solution3_2.rs  solution3_3.py  solution3_3.rs  solution3_4.py  solution3_4.rs  solution3_5.py  solution3_5.rs  solution3_6.py  solution3_6.rs  solution3_7.py  solution3_7.rs
src/ch04/: code_1.py  code_1.rs  code_2.py  code_2.rs  code_3.py  code_3.rs  code_4.py  code_4.rs  code_5.py  code_5.rs  code_6.py  code_6.rs  solution_1.py  solution_1.rs  solution_2.py  solution_2.rs  solution_5.py  solution_5.rs  solution_6.py  solution_6.rs
